# lab_axum

./: .env.example  Cargo.toml  README.md
migrations/: 20210527195516_identities_events.sql  20221206123905_jobs.sql
prisma/: schema.prisma
prisma/migrations/20230219192408_removed_jobs/: migration.sql
prisma/migrations/20230219214947_identity_verification/: migration.sql
prisma_cli/: Cargo.toml
scripts/: install-sqlx.sh
src/: expect_env.rs  main.rs  result.rs
src/domains/identities/: events.rs  mod.rs  repo.rs  role.rs
src/domains/identities/create/: mod.rs  repo.rs
src/domains/identities/list/: mod.rs  repo.rs
src/domains/jobs/: mod.rs
src/io/: mod.rs  repo.rs
src/io/jwt/: claims.rs  mod.rs
src/services/: mod.rs
src/services/identities/list/: repo.rs
src/services/identity/: events.rs  mod.rs  repo.rs  role.rs
src/services/identity/create/: mod.rs  repo.rs
src/services/identity/list/: repo.rs
src/services/identity/sign_in/: mod.rs  repo.rs
src/services/identity/verify/: mod.rs  repo.rs
