[package]
name = "lab_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.59"
axum = "0.6.1"
chrono = {version="0.4.23", features = ["serde"]}
dotenv = "0.15.0"
serde = {version= "1.0.148", features = ["derive"]}
serde_json = "1.0.89"
sqlx = {version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"]}
tokio = {version = "1.22.0", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = {version="0.3.16", features=["env-filter"]}
uuid = {version = "1.2.2", features = ["v4"]}
