[package]
name = "lab_axum"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2" # Needed for prisma to work if this becomes a virtual workspace.
members = ["prisma_cli"]

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.4", features=["postgresql"] }
async-trait = "0.1.59"
axum = "0.6.1"
chrono = {version="0.4.23", features = ["serde"]}
dotenvy = "0.15.6"
serde = {version= "1.0.148", features = ["derive"]}
serde_json = {version="1.0.89"}
tokio = {version = "1.22.0", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = {version="0.3.16", features=["env-filter"]}
uuid = {version = "1.2.2", features = ["v4"]}
jsonwebtoken = {version = "8.2.0", default-features = false }
rand = "0.8.5"
